refactor: adding controllers to improve the organization
