# src/swagger_output.json
@@ -7,15 +7,13 @@
   },
   "host": "localhost:3333",
   "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["http"],
   "paths": {
-     "tags": {
-       "name": "Tutors",
-       "description": "Endpoints related to Tutors"
-     },
-     "tags": {
+    "tags": {
+      "name": "Tutors",
+      "description": "Endpoints related to Tutors"
+    },
+    "tags": {
       "name": "Pets",
       "description": "Endpoints relacionados aos Pets"
     },
